codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__oversized_paste_reports_error_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, area)"
---
                                                  │
  Dashboard  ◆ BC      gpt-5-codex ▾   default ▾  │   Status   │  Agents   │  Sessions   │  Help
──────────────────────────────────────────────────│─────────────────────────━━━━━━━━━━━━━──────────
                                                  │
 ◆ CONVERSATION                                   │▎◆ SESSIONS
 ▎ YOU  Create a divergent standalone TUI.      ┃ │▎○ CLICK TO FOCUS  ACTIVE  0 sessions
                                                ┃ │▎+ New session  Ctrl+N
 ▎ CODEX  Started a fullscreen app shell backed ┃ │▎loading sessions
          by app-server turns.                  ┃ │
 ▎ PLAN  1. Build shell                         ┃ │▎◆ THREAD
         2. Wire transcript                     ┃ │▎stage-one
         3. Render dashboard                    ┃ │▎id 01900000-0000-7000-8000-000000000001
                                                ┃ │▎resume, fork, archive, delete in session list
 ▌ tool exec just test -p codex-tui             ┃ │
                                                ┃ │
 ▌ edited 3 files +128 -24                      ┃ │
 ▎ ERROR  Message exceeds the maximum size of   ┃ │
          1048576 bytes (1048594 provided).     ┃ │
                                                ┃ │
 ▎ CODEX  The new shell owns the fullscreen     ┃ │
          surface.                              ┃ │
                                                  │
╭────────────────────────────────────────────────╮│
│◆ MESSAGE  1:19                                 ││
│> draft stays intact                            ││
│                                                ││
│                                                ││
╰────────────────────────────────────────────────╯│
