codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__pending_settings_update.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, area)"
---
                                                                                                         │
  Dashboard  ◆ BETTER CODEX  better-codex                 gpt-5-codex ▾   default ▾   default ▾  ◐ ready │   Status    │   Agents    │   Sessions   │   Help
─────────────────────────────────────────────────────────────────────────────────────────────────────────│━━━━━━━━━━━━━────────────────────────────────────────
                                                                                                         │
 ◆ CONVERSATION                                                                                          │▎◆ SETTINGS
 ▎ SYSTEM  Better Codex app shell                                                                        │▎  Model  │ Permissions  │ Appearance │ Integrations
 ▎ YOU  Create a divergent standalone TUI.                                                               │▎─────────────────────────━━━━━━━━━━━━───────────────
                                                                                                         │▎  App theme: Tokyo Night
 ▎ CODEX  Started a fullscreen app shell backed by app-server turns.                                     │▎  Syntax theme: default
 ▎ PLAN  1. Build shell                                                                                  │▎  Animations: on
         2. Wire transcript                                                                              │▎› Tooltips: on
         3. Render dashboard                                                                             │
                                                                                                         │▎◆ PLAN
 ▌ tool exec just test -p codex-tui                                                                      │▎Build the standalone shell in slices.
                                                                                                         │▎x Shell frame
 ▌ edited 3 files +128 -24                                                                               │▎> Transcript model
                                                                                                         │▎- Approvals
 ▎ CODEX  The new shell owns the fullscreen surface.                                                     │
                                                                                                         │▎◆ TOOLS
                                                                                                         │▎in progress exec just test -p codex-tui
                                                                                                         │
                                                                                                         │▎◆ EDITS
╭───────────────────────────────────────────────────────────────────────────────────────────────────────╮│▎3 files +128 -24
│◆ MESSAGE  1:37                                                                                        ││
│> Summarize the new shell architecture                                                                 ││▎◆ WORKSPACE
│                                                                                                       ││▎profile managed
│                                                                                                       ││▎cwd /workspace/better-codex
╰───────────────────────────────────────────────────────────────────────────────────────────────────────╯│
