codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__permission_profile_update_refreshes_status_dashboard_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, Rect::new(0, 0, 100, 28,),)"
---
                                                  │
  Dashboard  ◆ BC          gpt-5.4 ▾   default ▾  │   Status   │  Agents   │  Sessions   │  Help
──────────────────────────────────────────────────│━━━━━━━━━━━━────────────────────────────────────
                                                  │
 ◆ CONVERSATION                                   │▎◆ SETTINGS
 ▎ SYSTEM  Better Codex app shell                 │▎Model │ Permissions │ Appearance │Integrations
 ▎ YOU  Create a divergent standalone TUI.        │▎━━━━━━─────────────────────────────────────────
                                                  │▎› Model: gpt-5.4
 ▎ CODEX  Started a fullscreen app shell backed   │▎  Reasoning: default
          by app-server turns.                    │▎  Service tier: default
 ▎ PLAN  1. Build shell                           │
         2. Wire transcript                       │▎◆ PLAN
         3. Render dashboard                      │▎Build the standalone shell in slices.
                                                  │▎x Shell frame
 ▌ tool exec just test -p codex-tui               │▎> Transcript model
                                                  │▎- Approvals
 ▌ edited 3 files +128 -24                        │
                                                  │▎◆ TOOLS
 ▎ CODEX  The new shell owns the fullscreen       │▎in progress exec just test -p codex-tui
          surface.                                │
                                                  │▎◆ EDITS
                                                  │▎3 files +128 -24
╭────────────────────────────────────────────────╮│
│◆ MESSAGE  1:37                                 ││▎◆ WORKSPACE
│> Summarize the new shell architecture          ││▎cwd /workspace/locked
│                                                ││▎profile :full (full access)
│                                                ││▎roots none selected
╰────────────────────────────────────────────────╯│
