codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__plain_navigation_and_forward_delete_edit_composer_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, Rect::new(0, 0, 100, 28,))"
---
                                                  │
  Dashboard  ◆ BC      gpt-5-codex ▾   default ▾  │   Status   │  Agents   │  Sessions   │  Help
──────────────────────────────────────────────────│
                                                  │◆ CONVERSATION         │ ◆ COMPOSER
 ◆ CONVERSATION                                   │ Alt+↑ / ↓   Select ms…│  ⌘← / →      Line ends
 ▎ SYSTEM  Better Codex app shell                 │ ↵ / c       Copy item │  ⌘⌫          Delete st…
 ▎ YOU  Create a divergent standalone TUI.        │ e           Branch    │  ⌥/^ + ←→    Move word
                                                  │ ^O          Copy reply│  S/A + ↵     Newline
 ▎ CODEX  Started a fullscreen app shell backed   │◆ DASHBOARD            │  Alt+M       Model
          by app-server turns.                    │ ^1 … ^4     Open tab  │  Alt+E       Effort
 ▎ PLAN  1. Build shell                           │ Alt+← / →   Prev/next │ ◆ APP
         2. Wire transcript                       │ Pg↑ / Pg↓   Scroll he…│  ^P          Commands
         3. Render dashboard                      │◆ SESSIONS             │  ^D          Show/hide
                                                  │ ↑↓ / jk     Select    │  ^C          Stop/canc…
 ▌ tool exec just test -p codex-tui               │ ↵ / r       Resume    │  Esc ×2      Exit app
                                                  │ f           Fork      │  ^N          New chat
 ▌ edited 3 files +128 -24                        │ a           Archive   │ ◆ AGENTS
                                                  │ u           Unarchive │  ↵           Focus/log
 ▎ CODEX  The new shell owns the fullscreen       │ v           Switch vi…│  ↑↓ / jk     Select
          surface.                                │ n           Rename    │  g / G       First/last
                                                  │ /           Search    │  r           Reload log
                                                  │ d           Delete    │
╭────────────────────────────────────────────────╮│
│◆ MESSAGE  1:6                                  ││
│> alpha beta                                    ││
│                                                ││
│                                                ││
╰────────────────────────────────────────────────╯│
