codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__plugin_management_catalog_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, Rect::new(0, 0, 110, 36,),)"
---
 ◆ BC                 gpt-5-codex ▾   default ▾  ● thinking │
────────────────────────────────────────────────────────────│ Sessions │ Agents │ Workspace │ Settings │Help
                                                            │────────────────────────────────━━━━━━━━━━━─────
 ◆ CONVERSATION                                             │
 ▎ SYSTEM  Better Codex app shell                           │▎◆ SETTINGS
 ▎ YOU  Create a divergent standalone TUI.                  │▎● FOCUSED  INTEGRATIONS  2 fields
                                                            │▎  Model    Permissions
 ▎ CODEX  Started a fullscreen app shell backed by app-     │▎  Appearance  ▸ Integrations
          server turns.                                     │▎plugin inventory refreshed
 ▎ PLAN  1. Build shell                                     │▎  MCP servers: not loaded
         2. Wire transcript                                 │▎› Plugins: 1 installed / 2 available
         3. Render dashboard                                │
                                                            │▎◆ MODEL
 ▌ tool exec just t╭──────────────────────────────────────────────────────────────────────╮
                   │◆ PLUGINS                                                             │
 ▌ edited 3 files +│1/2 plugin catalog  ↑↓ / j k navigate                                 │
 ▎ STATUS  plugin m│Install / update ↵  Toggle e  Uninstall u  Refresh r                  │
                   │> enabled    Calendar (local)                                         │
 ▎ CODEX  The new s│  available  Drive (local)                                            │
                   │                                                                      │
                   │Action: press i or Enter to update from the marketplace               │
                   │                                                                      │
                   ╰──────────────────────────────────────────────────────────────────────╯
                                                            │▎plugins 1 installed / 2 available
                                                            │▎marketplaces 1
                                                            │▎plugins 2
                                                            │
                                                            │▎◆ WORKSPACE
                                                            │▎cwd /workspace/better-codex
                                                            │▎profile managed
╭──────────────────────────────────────────────────────────╮│▎files restricted, net restricted
│◆ MESSAGE  ENTER SEND  SHIFT+ENTER NEWLINE  1:37          ││▎roots none selected
│> Summarize the new shell architecture                    ││
│                                                          ││
│                                                          ││
╰──────────────────────────────────────────────────────────╯│
