codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__queued_interactive_requests.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, Rect::new(0, 0, 100, 28,),)"
---

  Dashboard  ◆ BETTER CODEX  better-codex         gpt-5-codex ▾   default ▾   default ▾  ● thinking
────────────────────────────────────────────────────────────────────────────────────────────────────

 ◆ CONVERSATION
 ▎ STATUS  approval requested: Run command: cargo test -p codex-tui
 ▎ STATUS  interactive request queued: Tool input: tool-input-1
 ▎ STATUS  interactive request queued: MCP github: URL request

 ▎ CODEX  The new shell owns the fullscreen surface.









╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│◆ APPROVAL                                                                                        │
│? Run command: cargo test -p codex-tui                                                            │
│  Reason: Needs network access                                                                    │
│  Working directory: /workspace/better-codex                                                      │
│> 1 Run once                                                                                      │
│  2 Deny and interrupt                                                                            │
│   e Edit   ? Explain                                                                             │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
